# experiment

./: pyproject.toml
src/rp_poetry/: main.py
